--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "yarn-upgrade-all",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "This is a command line utility program to upgrade all the packages in your package.json to the latest version (potentially upgrading packages across major versions).",
-  "bin": "index.js",
+  "bin": {
+    "yarn-upgrade-all": "./index.js"
+  },
   "repository": "git@github.com:tylerlong/yarn-upgrade-all.git",
   "author": "Tyler Long <tyler4long@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "standard": "^10.0.2"
+    "standard": "^10.0.3"
   },
   "dependencies": {
-    "chalk": "^1.1.3"
+    "chalk": "^2.1.0"
   }
 }
