--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yarn-upgrade-all",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "This is a command line utility program to upgrade all the packages in your package.json to the latest version (potentially upgrading packages across major versions).",
   "bin": {
     "yarn-upgrade-all": "./index.js"
@@ -8,10 +8,13 @@
   "repository": "git@github.com:tylerlong/yarn-upgrade-all.git",
   "author": "Tyler Long <tyler4long@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "upgrade": "node index.js"
+  },
   "devDependencies": {
     "standard": "^10.0.3"
   },
   "dependencies": {
-    "chalk": "^2.1.0"
+    "chalk": "^2.3.0"
   }
 }
