Support upgrading global packages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yarn-upgrade-all",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "This is a command line utility program to upgrade all the packages in your package.json to the latest version (potentially upgrading packages across major versions).",
   "bin": {
     "yarn-upgrade-all": "./index.js"
@@ -15,6 +15,7 @@
     "standard": "^10.0.3"
   },
   "dependencies": {
-    "chalk": "^2.3.0"
+    "chalk": "^2.3.0",
+    "commander": "^2.12.2"
   }
 }
