--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.6.0",
   "description": "This is a command line utility program to upgrade all the packages in your package.json to the latest version (potentially upgrading packages across major versions).",
   "bin": {
-    "yarn-upgrade-all": "./index.js"
+    "yarn-upgrade-all": "./build/index.js"
   },
   "repository": "git@github.com:tylerlong/yarn-upgrade-all.git",
   "author": "Tyler Long <tyler4long@gmail.com>",
@@ -16,15 +16,16 @@
   ],
   "license": "MIT",
   "scripts": {
-    "upgrade": "node index.js"
+    "test": "ts-node src/index.ts",
+    "prepublishOnly": "tsc"
   },
   "dependencies": {
-    "chalk": "^2.4.2",
-    "commander": "^3.0.0"
+    "commander": "^8.3.0"
   },
   "devDependencies": {
-    "@types/node": "^14.11.2",
+    "@types/node": "^17.0.5",
     "gts": "^3.1.0",
-    "typescript": "^4.0.3"
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
