--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "yarn-upgrade-all",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "description": "This is a command line utility program to upgrade all the packages in your package.json to the latest version (potentially upgrading packages across major versions).",
   "bin": {
-    "yarn-upgrade-all": "./build/index.js"
+    "yarn-upgrade-all": "./build/src/index.js"
   },
   "repository": "git@github.com:tylerlong/yarn-upgrade-all.git",
   "author": "Tyler Long <tyler4long@gmail.com>",
