--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yarn-upgrade-all",
-  "version": "0.6.1",
+  "version": "0.6.2",
   "description": "This is a command line utility program to upgrade all the packages in your package.json to the latest version (potentially upgrading packages across major versions).",
   "bin": {
     "yarn-upgrade-all": "./build/src/index.js"
@@ -20,12 +20,13 @@
     "prepublishOnly": "tsc"
   },
   "dependencies": {
-    "commander": "^8.3.0"
+    "commander": "^9.0.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.5",
+    "@types/commander": "^2.12.2",
+    "@types/node": "^17.0.21",
     "gts": "^3.1.0",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "ts-node": "^10.6.0",
+    "typescript": "^4.6.2"
   }
 }
