--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-  "extends": "./node_modules/gts/"
+  "root": true,
+  "parserOptions": {
+    "project": "tsconfig.json"
+  },
+  "extends": [
+    "eslint-config-airbnb-base",
+    "eslint-config-airbnb-typescript/base"
+  ]
 }
