--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "scripts": {
     "test": "ts-node src/index.ts",
+    "lint": "eslint . --fix",
     "prepublishOnly": "tsc"
   },
   "dependencies": {
@@ -24,7 +25,12 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
-    "gts": "^3.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "eslint": "^8.12.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.4",
+    "eslint-plugin-import": "^2.25.4",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   }
