--- a/package.json
+++ b/package.json
@@ -1,34 +1,42 @@
 {
   "name": "yarn-upgrade-all",
-  "version": "0.7.2",
+  "version": "0.7.3",
   "description": "This is a command line utility program to upgrade all the packages in your package.json to the latest version (potentially upgrading packages across major versions).",
-  "bin": {
-    "yarn-upgrade-all": "./build/index.js"
-  },
   "repository": "git@github.com:tylerlong/yarn-upgrade-all.git",
+  "license": "MIT",
   "author": "Tyler Long <tyler4long@gmail.com>",
   "contributors": [
     {
-      "email": "hwss.s2@gmail.com",
       "name": "Gorniaky",
+      "email": "hwss.s2@gmail.com",
       "url": "http://github.com/Gorniaky"
     }
   ],
-  "license": "MIT",
+  "bin": {
+    "yarn-upgrade-all": "./build/index.js"
+  },
   "scripts": {
-    "test": "ts-node src/index.ts",
-    "lint": "eslint . --fix",
-    "prepublishOnly": "tsc"
+    "lint": "tsc --noEmit --target ESNext --moduleResolution NodeNext --module NodeNext ./src/*.ts && eslint --fix '**/*.{ts,tsx,js,jsx}' && prettier --write . && sort-package-json",
+    "prepublishOnly": "tsc",
+    "test": "tsx src/index.ts"
   },
   "devDependencies": {
     "@types/node": "^22.1.0",
     "@typescript-eslint/eslint-plugin": "^8.0.1",
     "@typescript-eslint/parser": "^8.0.1",
-    "eslint": "^9.8.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^18.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "ts-node": "^10.9.2",
+    "eslint": "^8.57.0",
+    "eslint-config-alloy": "^5.1.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.3.3",
+    "sort-package-json": "^2.10.0",
+    "tsx": "^4.16.5",
+    "ttpt": "^0.10.2",
     "typescript": "^5.5.4"
+  },
+  "yarn-upgrade-all": {
+    "ignore": [
+      "eslint"
+    ]
   }
 }
